// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Toggle Toggle is being created properly with default False value 1`] = `
<div>
  <div>
    <label
      class="sc-bdVaJa dMsKTk"
      for="Toggle"
    >
      Toggle
    </label>
    <button
      class="sc-bwzfXH dRdGGI"
      id="Toggle"
      name="Toggle"
    >
      No
    </button>
  </div>
</div>
`;

exports[`components:Toggle Toggle is being created properly with initial True value 1`] = `
<div>
  <div>
    <label
      class="sc-bdVaJa dMsKTk"
      for="Toggle"
    >
      Toggle
    </label>
    <button
      class="sc-bwzfXH dRdGGI"
      id="Toggle"
      name="Toggle"
    >
      Yes
    </button>
  </div>
</div>
`;

exports[`components:Toggle Toggle is being created properly with no label 1`] = `
<div>
  <div>
    <button
      class="sc-bwzfXH dRdGGI"
      id="Toggle"
      name="Toggle"
    >
      No
    </button>
  </div>
</div>
`;
